# tfl-cycle

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.ipynb
bigquery/: create_ride_facts.txt  create_stations_dim.txt
dags/: simgle_gcs.py  tfl_extract.py  tfl_extract_monthly.py  tfl_load.py  tfl_stations.py  tfl_transfrom.py
streamlit_app/: Dockerfile  docker-compose.yml  pyproject.toml  testing.ipynb
streamlit_app/map_configs/: arcs.json
streamlit_app/map_dashboard/: Home page.py  advanced_iii.py
streamlit_app/map_dashboard/advanced/: bigquery_helper.py  map_1_config.json  map_2_config.json  transfo_functions.py  wagondataengstu1413-569f3375018f.json
streamlit_app/map_dashboard/pages/: page1.py  page2.py
