[tool.poetry]
name = "tfl-cycle"
version = "0.1.0"
description = "Data engineering bootcamp final project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
